# calcure-testing

./: .gitignore  TESTING_REPORT.md  mutatest_calendars.rst  mutatest_calendars_full.rst  mutatest_data_after.rst  mutatest_data_final.rst  mutatest_data_full.rst  pyproject.toml  test_blackbox.py  test_integration.py  test_mock.py  test_whitebox.py
reports/: Yash_Harshal_Sadt_FinalPresentation.pptx  make_pptx.py  mutation_testing_report.canvas.tsx  presentation.html  presentation.pptx
tests/blackbox/: test_blackbox.py
tests/cli/: test_cli.py
tests/cli/fixtures/: sample_events.csv  sample_tasks.csv
tests/integration/: test_integration.py
tests/mock/: test_mock.py
tests/mutation/: test_mutation.py
tests/whitebox/: test_whitebox.py
tools/: week_numbers_probe.py
