[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mutmut]
paths_to_mutate = "calcure/data.py,calcure/calendars.py"
tests_dir = "."
runner = "python -m pytest tests/blackbox/test_blackbox.py tests/whitebox/test_whitebox.py tests/integration/test_integration.py -x -q"
